almost done hacking together a slow solution to solving linear equations

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <script src="https://unpkg.com/mathjs@5.0.0/dist/math.min.js" charset="utf-8"></script>
     <script src="client.js" charset="utf-8"></script>
   </head>
   <body>
