fixing file structure, adding server for CORS bs

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <title></title>
     <script src="https://unpkg.com/mathjs@5.0.0/dist/math.min.js" charset="utf-8"></script>
-    <script src="client.js" charset="utf-8"></script>
+    <!-- Oooh i was trying to attach the 'module' tag to wrong script before: -->
+    <script type="module" src="scripts/client.js" charset="utf-8"></script>
   </head>
   <body>
 
